--- a/css/laptop.css
+++ b/css/laptop.css
@@ -26,7 +26,7 @@ section > .container{
 /* banner */
 .img-banner {
     position: relative;
-    background-image: url(/images/banner.jpg);
+    background-image: url('../images/banner.jpg');
     width: 100%;
     height: 600px;
     background-size: cover;
